@@ -35,6 +35,7 @@ import javax.crypto.spec.PBEKeySpec;
 import java.io.*;
 import java.math.BigInteger;
 import java.net.InetAddress;
+import java.nio.file.Files;
 import java.security.*;
 import java.security.cert.CertificateEncodingException;
 import java.security.cert.CertificateException;
@@ -111,8 +112,7 @@ public class SecurityHelper {
 
     public static X509Certificate getX509FromDER(File file) throws IOException, CertificateException {
         CertificateFactory certificateFactory = CertificateFactory.getInstance("X509");
-        FileInputStream fis = new FileInputStream(file);
-        ByteArrayInputStream bis = new ByteArrayInputStream(fis.readAllBytes());
+        ByteArrayInputStream bis = new ByteArrayInputStream(Files.readAllBytes(file.toPath()));
         X509Certificate cert = (X509Certificate) certificateFactory.generateCertificate(bis);
 
         bis.close();
